# ClawAV

./: .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  Makefile  README.md  config.example.yaml  config.toml
apparmor/: etc.clawtower.protect
docs/: ALERT-PIPELINE.md  ARCHITECTURE.md  AUDIT-LOG-R6.md  AUDIT-LOG.md  CLAWSUDO-AND-POLICY.md  CONFIGURATION.md  DAY1-OPERATIONS.md  INDEX.md  INSTALL.md  MONITORING-SOURCES.md  NOISE-ANALYSIS.md  POC-RESULTS.md  SECURITY-SCANNERS.md  SENTINEL.md  SOURCE-INVENTORY.md  TUNING.md  code-review-2026-02-17.md  findings-2026-02-18-enterprise-readiness.md  openclaw-current-status.md  openclaw-integration.md  openclaw-release-audit.md  openclaw-security-architecture.md  red-lobster-v5-agent-prompt.md
docs/drafts/: substack-launch-post.md
docs/pentest-results/: 2026-02-16-redlobster-v3.md  2026-02-16-redlobster-v4.md  2026-02-17-redlobster-v4-hardening.md  2026-02-17-redlobster-v6.md
docs/plans/: 2026-02-15-installer-ux-design.md  2026-02-15-openclaw-security-integration-design.md  2026-02-15-openclaw-security-integration-implementation.md  2026-02-15-website-design.md  2026-02-16-clawav-to-clawtower-design.md  2026-02-16-clawav-to-clawtower.md  2026-02-16-config-layering-design.md  2026-02-16-doc-audit.md  2026-02-16-exfil-detection-fix-design.md  2026-02-16-exfil-detection-fix.md  2026-02-16-noise-fixes-design.md  2026-02-16-noise-fixes-implementation.md  2026-02-16-red-lobster-pentest-design.md  2026-02-17-config-dropdown-implementation.md  2026-02-17-red-lobster-v5-design.md  2026-02-17-tinman-coverage-design.md  2026-02-17-tinman-coverage-implementation.md  2026-02-18-enterprise-agent-security-design.md  2026-02-18-enterprise-agent-security-hardening-roadmap.md  2026-02-18-go-to-market-strategy.md  2026-02-18-p3-enterprise-assurance-design.md  2026-02-18-p3-enterprise-assurance-implementation.md  2026-02-18-runtime-abstraction-phase1-design.md
docs/red-lobster/: README.md  fixes-applied.md  glob-matching-bug.md  harden-debugging-log.md  sentinel-silent-skip.md  v8-raw-results.md  v8-results-2026-02-18.md
patterns/: prompt-firewall-patterns.json
patterns/barnacle/: dangerous-commands.json  injection-patterns.json  privacy-rules.json  supply-chain-ioc.json
policies/: default.yaml
profiles/: enterprise-strict.toml
scripts/: build-preload.sh  configure.sh  enable-preload.sh  install.sh  oneshot-install.sh  redlobster-v5-run-all.sh  setup-audit-rules.sh  setup-auditd.sh  setup-iptables.sh  setup.sh  sync-barnacle.sh  sync-secureclaw.sh  uninstall.sh
src/: admin.rs  aggregator.rs  alerts.rs  api.rs  auditd.rs  barnacle.rs  behavior.rs  cognitive.rs  config.rs  firewall.rs  forensics.rs  main.rs  memory_sentinel.rs  network.rs  openclaw_config.rs  process_cage.rs  prompt_firewall.rs  proxy.rs  response.rs  scanner.rs  secureclaw.rs  sentinel.rs  tui.rs  update.rs
src/behavior/: mod.rs  patterns.rs  plugin.rs  privilege.rs  tests.rs
src/core/: aggregator.rs  app_state.rs  orchestrator.rs  response.rs
src/detect/: barnacle.rs  compliance.rs
src/enforcement/: seccomp.rs
src/notify/: discord.rs  mod.rs  tray.rs
src/policy/: mod.rs  network.rs  rules.rs
src/preload/: interpose.c  interpose_v2.c  test_interpose.c
src/proxy/: auth_profiles.rs  mod.rs
src/scanner/: enforcement.rs  filesystem.rs  hardening.rs  mod.rs  network.rs  remediate.rs
src/sources/: auditd.rs  firewall.rs  logtamper.rs  memory_sentinel.rs  mod.rs  session_log.rs
src/testing/: adversarial.rs  benchmarks.rs  integration.rs  mod.rs
