[package]
name = "clawav"
version = "0.1.8"
edition = "2021"
description = "Tamper-proof security watchdog for AI agents"
license = "MIT"

[dependencies]
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
notify = "7"
anyhow = "1"
hyper = { version = "0.14", features = ["server", "client", "http1", "tcp"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
regex = "1"
serde_yaml = "0.9"
glob-match = "0.2"

[[bin]]
name = "clawav"
path = "src/main.rs"

[[bin]]
name = "clawsudo"
path = "src/bin/clawsudo.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
