[package]
name = "clawtower"
version = "0.5.4-beta"
edition = "2021"
description = "Tamper-proof security watchdog for AI agents"
license = "AGPL-3.0-or-later"

[dependencies]
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
notify = "7"
anyhow = "1"
hyper = { version = "0.14", features = ["server", "client", "http1", "tcp"] }
hyper-rustls = { version = "0.24", features = ["http1", "http2"] }
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
regex = "1"
serde_yaml = "0.9"
glob-match = "0.2"
xattr = "1"
zeroize = "1"
uuid = { version = "1", features = ["v4"] }
ipnet = "2"
ed25519-dalek = { version = "2", features = ["std"] }
async-trait = "0.1"
blake3 = "1"
ksni = { version = "0.2", optional = true }
dbus = { version = "0.9", optional = true }
png = { version = "0.17", optional = true }

[features]
tray = ["dep:ksni", "dep:dbus", "dep:png"]

[[bin]]
name = "clawtower"
path = "src/main.rs"

[[bin]]
name = "clawsudo"
path = "src/bin/clawsudo.rs"

[[bin]]
name = "clawtower-tray"
path = "src/bin/clawtower-tray.rs"
required-features = ["tray"]

[[bin]]
name = "clawtower-ctl"
path = "src/bin/clawtower-ctl.rs"
required-features = ["tray"]

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
